--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ button{
 }
 
 .popup{
+    z-index: 1;
     position: absolute;
     left: 50%;
     top: 50%;
@@ -31,10 +32,6 @@ button{
     width: 600PX;
     height: 200PX;
     background: rgba(0, 0, 0, 0.7);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
     border-radius: 20px;
 }
 
@@ -43,6 +40,8 @@ button{
 }
 
 .lost-popup{
+    text-align: center;
+    padding-top: 20px;
     display: none;
 }
 
