--- a/style.css
+++ b/style.css
@@ -36,14 +36,16 @@ button{
 }
 
 .won-popup,
-.lost-popup{
+.lost-popup,
+.replay-popup{
     text-align: center;
     padding-top: 20px;
     display: none;
 }
 
 .replay-btn,
-.start-btn{
+.start-btn,
+.stop-btn{
     background-color: beige;
     border: 3px solid #333;
     border-radius: 10px;
@@ -51,6 +53,10 @@ button{
     cursor: pointer;
 }
 
+.stop-btn{
+    position: absolute;
+    display: none;
+}
 
 .replay-btn{
     width: 75px;
@@ -71,7 +77,8 @@ button{
     align-items: center;
 }
 
-.start-btn{
+.start-btn,
+.stop-btn{
     width: 85px;
     height: 85px;
     font-size: 44px;
