--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body{
 
 button{
     border: none;
-    background-color: transparent;
+    outline: none;
 }
 
 .bg{
@@ -33,11 +33,6 @@ button{
     height: 200PX;
     background: rgba(0, 0, 0, 0.7);
     border-radius: 20px;
-}
-
-.won-popup,
-.lost-popup,
-.replay-popup{
     text-align: center;
     padding-top: 20px;
     display: none;
@@ -75,6 +70,7 @@ button{
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 30px;
 }
 
 .start-btn,
@@ -82,7 +78,7 @@ button{
     width: 85px;
     height: 85px;
     font-size: 44px;
-    margin: 10px 0;
+    margin-bottom: 10px;
 }
 
 .start-btn:hover,
